2004-02-20  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/event-context.cpp (sp_event_context_private_root_handler,
	set_event_location): NR::Point'ification.

	* src/desktop.h (sp_desktop_zoom_relative_keep_point,
	sp_desktop_scroll_world): Add NR::Point version.

2004-02-19  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/Makefile.am: sp-item-rm-unsatisfied-cns.cpp,
	sp-item-rm-unsatisfied-cns.h, sp-guide-attachment.h,
	sp-item-notify-moveto.cpp, sp-item-notify-moveto.h,
	sp-guide-constraint.h, satisfied-guide-cns.cpp,
	satisfied-guide-cns.h, sp-item-update-cns.cpp,
	sp-item-update-cns.h: New files.
	* src/desktop-events.cpp (sp_dt_guide_event):
	* src/seltrans.cpp (sp_sel_trans_ungrab):
	* src/sp-guide.cpp (sp_guide_moveto, sp_guide_remove):
	* src/sp-guide.h:
	* src/sp-item.cpp (sp_item_set):
	* src/sp-item.h:
	Make snap-to-guide more persistent.  (Still not saved to XML though.)

	* src/sp-spiral.cpp (sp_spiral_fit_and_draw, sp_spiral_set_shape):
	Address NRPoint warning.

	* src/widgets/icon.cpp (sp_icon_paint): Cleanup.

	* src/libnr/nr-types.h: Change deprecated-cast warning from runtime
	to compile-time.

	* src/helper/sp-canvas.h, src/helper/sp-canvas.cpp
	(sp_canvas_world_pt_inside_window): New function.

2004-02-18  MenTaLguY <mental@rydia.net>

	* src/widgets/icon.cpp, src/widgets/icon.h: rewrote to use gdk for
	  compositing; now it looks tolerable with ANY theme!

	* src/dialogs/item-properties.cpp: slight stabs at implementing "visible"

	* src/libnr/nr-types.h: added warning for deprecated casts

2004-02-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/align.cpp (sp_align_arrange_clicked): Cleanup.

	* src/sp-item-transform.cpp (sp_item_move_rel): NR::Matrix'ification.

	* src/desktop-events.cpp (sp_dt_guide_event): Get guide line dialog
	working again: double-click on a guide to show the guide dialog.

	* src/utest/utest.h (UTEST_NAMED_ASSERT):
	Wrap this macro in static_cast<void>().
